--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -92,7 +92,7 @@ header .container {
 
 .not-connected a {
   text-decoration: none;
-  color: var(--accent-color);
+  color: #F0EAD6
   font-size: 1.5rem;
   font-weight: bold;
 }
