changed btn text color

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -92,7 +92,7 @@ header .container {
 
 .not-connected a {
   text-decoration: none;
-  color: #F0EAD6
+  color: #f0ead6;
   font-size: 1.5rem;
   font-weight: bold;
 }
